# shopping-cart-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: docker-compose.yml
docs/learning-journal/: 2026-04-23-brainstorming-agentic-ai.md
docs/progress/: plan.html
docs/superpowers/plans/: 2026-04-23-week1-foundations.md  2026-04-23-week2-rag-langgraph-skeleton.md  2026-04-23-week3-multiagent-guardrails-hitl-skeleton.md  2026-04-23-week4-evals-ci-observability-skeleton.md
docs/superpowers/specs/: 2026-04-23-retail-shopping-copilot-design.md
migrations/: env.py
migrations/versions/: 0001_create_products_table.py
scripts/: seed.py
src/shopping_copilot/: config.py
src/shopping_copilot/api/: deps.py  main.py  schemas.py
src/shopping_copilot/api/routers/: chat.py  health.py
src/shopping_copilot/domain/: entities.py  ports.py  value_objects.py
src/shopping_copilot/infrastructure/catalog/: models.py  postgres_catalog.py
src/shopping_copilot/infrastructure/embeddings/: voyage_adapter.py
src/shopping_copilot/infrastructure/llm/: anthropic_adapter.py
src/shopping_copilot/infrastructure/observability/: langsmith_setup.py
tests/: conftest.py
tests/integration/: test_postgres_catalog.py
tests/unit/domain/: test_entities.py  test_value_objects.py
tests/unit/infrastructure/: test_anthropic_adapter.py  test_voyage_adapter.py
ui/: app.py
