[project]
name = "shopping-copilot"
version = "0.1.0"
description = "Retail shopping copilot — agentic AI learning project"
authors = [{ name = "Jorge Pareja", email = "jorge.pareja@bayteq.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.97.0",
    "asyncpg>=0.31.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "voyageai>=0.3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shopping_copilot"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
  "N",    # pep8-naming
  "PL",   # pylint
  # "TCH" removido: choca con Pydantic/SQLAlchemy/FastAPI (anotaciones runtime)
]
ignore = ["PLR0913"]  # too many arguments — a veces inevitable en handlers

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]   # magic values in tests están bien

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = "src"
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false  # tests pueden tener fixtures sin tipar

[[tool.mypy.overrides]]
module = ["voyageai", "voyageai.*"]
ignore_missing_imports = true
implicit_reexport = true
